--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="React Truffle Box" />
-    <title>React Truffle Box</title>
+    <meta name="description" content="Voting Dapp" />
+    <title>F & G Voting Dapp</title>
   </head>
   <body>
     <noscript>
